[gd_scene load_steps=14 format=2]

[ext_resource path="res://shared/settings/settings.gd" type="Script" id=1]
[ext_resource path="res://shared/settings/images/all.png" type="Texture" id=2]
[ext_resource path="res://title/customization/assets/customization_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://title/customization/assets/images/button.png" type="Texture" id=4]
[ext_resource path="res://shared/fonts/Bebas Neue/BebasNeue-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=5]
size = 52
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=6]
size = 52
font_data = ExtResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://shared/fonts/Roboto/Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = SubResource( 7 )

[node name="Settings" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.52549 )
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.2, 0.2, 0.2, 1 )

[node name="TopBar" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar"]
margin_left = 560.0
margin_top = 15.0
margin_right = 1360.0
margin_bottom = 81.0

[node name="VideoButton" type="Button" parent="TopBar/HBoxContainer"]
margin_right = 398.0
margin_bottom = 66.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 1 )
text = "Video"

[node name="AudioButton" type="Button" parent="TopBar/HBoxContainer"]
margin_left = 402.0
margin_right = 800.0
margin_bottom = 66.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 1 )
text = "Audio"

[node name="Bar" type="ColorRect" parent="TopBar"]
margin_left = 510.0
margin_top = 85.0
margin_right = 1410.0
margin_bottom = 95.0
color = Color( 0.886275, 0.886275, 0.886275, 1 )

[node name="Bar2" type="ColorRect" parent="TopBar"]
margin_left = 460.0
margin_top = 71.0
margin_right = 1460.0
margin_bottom = 81.0
color = Color( 0.72549, 0.72549, 0.72549, 1 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.513726 )
margin_left = 566.0
margin_top = 148.0
margin_right = 1355.0
margin_bottom = 990.0

[node name="Video" type="Control" parent="."]

[node name="HBoxContainer" type="GridContainer" parent="Video"]
margin_left = 583.0
margin_top = 153.0
margin_right = 1341.0
margin_bottom = 988.0
custom_constants/vseparation = 10
columns = 2

[node name="FScreenLabel" type="Label" parent="Video/HBoxContainer"]
margin_top = 1.0
margin_right = 160.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 8 )
text = "Full Screen"

[node name="FScreenCheck" type="CheckButton" parent="Video/HBoxContainer"]
margin_left = 682.0
margin_right = 758.0
margin_bottom = 40.0
size_flags_horizontal = 10

[node name="VsyncLabel" type="Label" parent="Video/HBoxContainer"]
margin_top = 51.0
margin_right = 160.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 8 )
text = "Vsync"

[node name="VsyncCheck" type="CheckButton" parent="Video/HBoxContainer"]
margin_left = 682.0
margin_top = 50.0
margin_right = 758.0
margin_bottom = 90.0
size_flags_horizontal = 10

[node name="Audio" type="Control" parent="."]
visible = false

[node name="GridContainer" type="GridContainer" parent="Audio"]
margin_left = 583.0
margin_top = 153.0
margin_right = 1341.0
margin_bottom = 988.0
columns = 2

[node name="MasterLabel" type="Label" parent="Audio/GridContainer"]
margin_right = 102.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 8 )
text = "Master"

[node name="MasterHBoxContainer" type="HBoxContainer" parent="Audio/GridContainer"]
margin_left = 325.0
margin_right = 758.0
margin_bottom = 38.0
size_flags_horizontal = 10
custom_constants/separation = 15

[node name="Value" type="Label" parent="Audio/GridContainer/MasterHBoxContainer"]
margin_right = 18.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 8 )
text = "0"

[node name="CenterContainer" type="CenterContainer" parent="Audio/GridContainer/MasterHBoxContainer"]
margin_left = 33.0
margin_right = 433.0
margin_bottom = 38.0

[node name="MasterHSlider" type="HSlider" parent="Audio/GridContainer/MasterHBoxContainer/CenterContainer"]
margin_top = 11.0
margin_right = 400.0
margin_bottom = 27.0
rect_min_size = Vector2( 400, 0 )
max_value = 20.0

[node name="MusicLabel" type="Label" parent="Audio/GridContainer"]
margin_top = 42.0
margin_right = 102.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 8 )
text = "Music"

[node name="MusicHBoxContainer" type="HBoxContainer" parent="Audio/GridContainer"]
margin_left = 325.0
margin_top = 42.0
margin_right = 758.0
margin_bottom = 80.0
size_flags_horizontal = 10
custom_constants/separation = 15

[node name="Value" type="Label" parent="Audio/GridContainer/MusicHBoxContainer"]
margin_right = 18.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 8 )
text = "0"

[node name="CenterContainer" type="CenterContainer" parent="Audio/GridContainer/MusicHBoxContainer"]
margin_left = 33.0
margin_right = 433.0
margin_bottom = 38.0

[node name="MusicHSlider" type="HSlider" parent="Audio/GridContainer/MusicHBoxContainer/CenterContainer"]
margin_top = 11.0
margin_right = 400.0
margin_bottom = 27.0
rect_min_size = Vector2( 400, 0 )
max_value = 20.0

[node name="SFXLabel2" type="Label" parent="Audio/GridContainer"]
margin_top = 84.0
margin_right = 102.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 8 )
text = "SFX"

[node name="SFXHBoxContainer" type="HBoxContainer" parent="Audio/GridContainer"]
margin_left = 325.0
margin_top = 84.0
margin_right = 758.0
margin_bottom = 122.0
size_flags_horizontal = 10
custom_constants/separation = 15

[node name="Value" type="Label" parent="Audio/GridContainer/SFXHBoxContainer"]
margin_right = 18.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 8 )
text = "0"

[node name="CenterContainer" type="CenterContainer" parent="Audio/GridContainer/SFXHBoxContainer"]
margin_left = 33.0
margin_right = 433.0
margin_bottom = 38.0

[node name="SFXHSlider" type="HSlider" parent="Audio/GridContainer/SFXHBoxContainer/CenterContainer"]
margin_top = 11.0
margin_right = 400.0
margin_bottom = 27.0
rect_min_size = Vector2( 400, 0 )
max_value = 20.0

[node name="ButtonBack" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.705882 )
position = Vector2( 118, 1039 )

[node name="TextureButton" type="TextureButton" parent="ButtonBack"]
margin_left = -93.0
margin_top = -18.0
margin_right = 97.0
margin_bottom = 31.0
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="ButtonBack"]
margin_left = -93.0
margin_top = -26.0
margin_right = 97.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Back"
align = 1
valign = 1

[connection signal="pressed" from="TopBar/HBoxContainer/VideoButton" to="." method="_on_VideoButton_pressed"]
[connection signal="pressed" from="TopBar/HBoxContainer/AudioButton" to="." method="_on_AudioButton_pressed"]
[connection signal="toggled" from="Video/HBoxContainer/FScreenCheck" to="." method="_on_FScreenCheck_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/VsyncCheck" to="." method="_on_VsyncCheck_toggled"]
[connection signal="value_changed" from="Audio/GridContainer/MasterHBoxContainer/CenterContainer/MasterHSlider" to="." method="_on_MasterHSlider_value_changed"]
[connection signal="value_changed" from="Audio/GridContainer/MusicHBoxContainer/CenterContainer/MusicHSlider" to="." method="_on_MusicHSlider_value_changed"]
[connection signal="value_changed" from="Audio/GridContainer/SFXHBoxContainer/CenterContainer/SFXHSlider" to="." method="_on_SFXHSlider_value_changed"]
[connection signal="pressed" from="ButtonBack/TextureButton" to="." method="_on_BackButton_pressed"]
